--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       if (actionCode) {
         firebase.auth().applyActionCode(actionCode).then(() => {
           // Successfully signed in
-          window.location.href = 'https://www.yoursite.com/success'; // Replace with your redirect URL
+          window.location.href = 'https://gmajor07.github.io/wallblend/
+'; // Replace with your redirect URL
         }).catch((error) => {
           console.error('Error completing sign-in:', error);
         });
