--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       if (actionCode) {
         firebase.auth().applyActionCode(actionCode).then(() => {
           // Successfully signed in
-          window.location.href = 'https://gmajor07.github.io/wallblend/
-'; // Replace with your redirect URL
+          window.location.href = 'https://gmajor07.github.io/wallblend/index.html'; // Replace with your redirect URL
         }).catch((error) => {
           console.error('Error completing sign-in:', error);
         });
